--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1></h1>
-												<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
+												<h2>harga mulai 300 jutaan<a href="https://colorlib.com/" target="_blank"></a></h2>
 												<p><a class="btn btn-primary btn-learn">View Project <i class="icon-arrow-right3"></i></a></p>
 											</div>
 					   				</div>
@@ -122,8 +122,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					   			<div class="col-md-6 col-md-offset-3 col-md-push-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>harga mulai 300 jutaan</h1>
-												<h2>free biaya balik nama surat petok D <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
+						   					<h1>free biaya balik nama surat petok D</h1>
+										
 												<p><a class="btn btn-primary btn-learn">View Project <i class="icon-arrow-right3"></i></a></p>
 											</div>
 					   				</div>
