--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+	<script src="https://maps.app.goo.gl/99b79ZNBmXdJ135LA"></script>
 	<script src="js/google_map.js"></script>
 	
 	
