--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>dijual rumah siap huni</h1>
-						   					<h2>surabaya barat daerah northwest citraland<a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
+						   					<h2>surabaya barat daerah northwest citraland<a href="https://colorlib.com/" target="_blank"></a></h2>
 												<p><a class="btn btn-primary btn-learn">View Project <i class="icon-arrow-right3"></i></a></p>
 											</div>
 					   				</div>
@@ -145,8 +145,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<div class="about-desc">
 								<span class="heading-meta">Welcome</span>
 								<h2 class="colorlib-heading">Who we are</h2>
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<p>IndoProperti adalah platform penyedia jasa jual beli dan sewa properti terpercaya. Kami menghadirkan pilihan rumah terbaik di lokasi strategis dengan harga kompetitif. Tim kami siap membantu Anda dengan proses yang cepat, aman, dan transparan..</p>
+								<p>Temukan Rumah Impian Anda dengan Mudah
+Beli atau sewa properti terbaik dengan harga terjangkau dan lokasi strategis. Kami siap membantu Anda mewujudkan hunian ideal!</p>
 							</div>
 							<div class="row padding">
 								<div class="col-md-4 no-gutters animate-box" data-animate-effect="fadeInLeft">
@@ -177,8 +178,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">What I do?</span>
-							<h2 class="colorlib-heading">Here are some of my expertise</h2>
+							<span class="heading-meta"></span>
+							<h2 class="colorlib-heading">Here are some of my Advantages</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -190,8 +191,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-worker"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>General Conctructing</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>harga murah</h3>
+											<p>"Harga Bisa Nego!" – Hubungi kami sekarang sebelum kehabisan!</p>
 										</div>
 									</div>
 
@@ -200,8 +201,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-sketch"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Pre-Contruction Design</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>lokasi strategis</h3>
+											<p>Dekat Fasilitas Umum" – Lokasi strategis dekat sekolah, pasar, dan transportasi umum. </p>
 										</div>
 									</div>
 
@@ -210,8 +211,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-engineering"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Building &amp; Modeling</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>rumah &amp; siap huni</h3>
+											<p>"Rumah Minimalis Siap Huni" – Cocok untuk keluarga muda, lingkungan aman dan nyaman. </p>
 										</div>
 									</div>
 
@@ -220,8 +221,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-crane"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Construction Management</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>pembayaran mudah</h3>
+											<p>Cicilan Ringan & DP Murah" – Tersedia skema KPR dan dukungan bank rekanan. </p>
 										</div>
 									</div>
 								</div>
