--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Balay Template</title>
+	<title>Suprat Properti</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -53,7 +53,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
-			<h1 id="colorlib-logo"><a href="index.html">Balay</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html">Suprat</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -66,8 +66,8 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> Distributed by: <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="http://nothingtochance.co/" target="_blank">nothingtochance.co</a></span></small></p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"></a>  <a href="https://themewagon.com/" target="_blank"></a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span> <a href="http://nothingtochance.co/" target="_blank"</a></span></small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -91,8 +91,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<div class="about-desc">
 								<span class="heading-meta">Welcome</span>
 								<h2 class="colorlib-heading">Who we are</h2>
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<p>Suprat Properti adalah platform penyedia jasa jual beli dan sewa properti terpercaya. Kami menghadirkan pilihan rumah terbaik di lokasi strategis dengan harga kompetitif. Tim kami siap membantu Anda dengan proses yang cepat, aman, dan transparan.</p>
+								<p>Temukan Rumah Impian Anda dengan Mudah
+Beli atau sewa properti terbaik dengan harga terjangkau dan lokasi strategis. Kami siap membantu Anda mewujudkan hunian ideal!.</p>
 							</div>
 							<div class="row padding">
 								<div class="col-md-4 no-gutters animate-box" data-animate-effect="fadeInLeft">
@@ -118,8 +119,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row">
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<h2 class="colorlib-heading">History</h2>
-							<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+							<h2 class="colorlib-heading">Tentang Kami</h2>
+							<p>Kami adalah perusahaan yang bergerak di bidang properti, dengan fokus utama pada penyediaan hunian berkualitas di lokasi strategis dan harga yang kompetitif. IndoProperti hadir untuk mempermudah Anda menemukan rumah impian, baik untuk tempat tinggal maupun investasi jangka panjang..</p>
 						</div>
 						<div class="col-md-8 animate-box" data-animate-effect="fadeInRight">
 							<div class="fancy-collapse-panel">
@@ -127,7 +128,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Why choose me?
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">tujuan kami
 									            </a>
 									        </h4>
 									    </div>
@@ -135,30 +136,21 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+										      			<p>Visi Kami
+Menjadi platform properti pilihan utama masyarakat Indonesia yang mengutamakan kepercayaan, transparansi, dan kemudahan. </p>
 										      		</div>
 										      		<div class="col-md-6">
-										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+										      			<p>Misi Kami
+Menyediakan informasi properti yang akurat dan lengkap.
+
+Memberikan pelayanan ramah, cepat, dan profesional.
+
+Membantu masyarakat memiliki hunian layak dengan harga terjangkau.
+
+Menjadi jembatan antara penjual dan pembeli dengan proses yang aman dan efisien.</p>
 										      		</div>
 										      	</div>
 									         </div>
-									    </div>
-									</div>
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingTwo">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What I do?
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-													<ul>
-														<li>Separated they live in Bookmarksgrove right</li>
-														<li>Separated they live in Bookmarksgrove right</li>
-													</ul>
-									        </div>
 									    </div>
 									</div>
 									<div class="panel panel-default">
@@ -170,7 +162,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+									            <p> <strong></strong>, 🏠 Beragam Pilihan Properti: Mulai dari rumah sederhana hingga hunian mewah.
+
+📍 Lokasi Strategis: Dekat fasilitas umum, sekolah, pusat perbelanjaan, dan transportasi.
+
+💬 Konsultasi Gratis: Tim kami siap membantu Anda menentukan pilihan terbaik.
+
+✅ Harga Transparan & Kompetitif: Tanpa biaya tersembunyi, jujur dan jelas..</p>	
 									        </div>
 									    </div>
 									</div>
@@ -221,7 +219,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<p class="colorlib-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p class="colorlib-lead"></p>
 							<p><a href="#" class="btn btn-primary btn-learn">Contact me!</a></p>
 						</div>
 						
