--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Balay Template</title>
+	<title>Suprat properti</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -53,7 +53,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
-			<h1 id="colorlib-logo"><a href="index.html">Balay</a></h1>
+			<h1 id="colorlib-logo"><a href="index.html">Suprat</a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -66,8 +66,8 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> Distributed by: <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="http://nothingtochance.co/" target="_blank">nothingtochance.co</a></span></small></p>
+ &copy;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true"></i> <a href="https://colorlib.com" target="_blank"></a> : <a href="" target="_blank"></a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>: <a href="http://nothingtochance.co/" target="_blank"></a></span></small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -83,7 +83,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Work</span>
+							<span class="heading-meta">our Work</span>
 							<h2 class="colorlib-heading">Our Work</h2>
 						</div>
 					</div>
@@ -93,7 +93,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
-										<span>Building</span>
+										<span>house</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -108,7 +108,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
-										<span>House, Apartment</span>
+										<span>House</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -123,7 +123,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
-										<span>Dining Room</span>
+										<span>house</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -153,7 +153,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
-										<span>Condo, Pad</span>
+										<span>coming soon</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -168,7 +168,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 06</a></h3>
-										<span>Table, Chairs</span>
+										<span>coming soon</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -184,7 +184,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
-										<span>House, Apartment</span>
+										<span>coming soon</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -199,7 +199,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
-										<span>Dining Room</span>
+										<span>coming soon</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -214,7 +214,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 04</a></h3>
-										<span>House, Building</span>
+										<span>coming soon</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -229,7 +229,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
-										<span>Condo, Pad</span>
+										<span>coming soon</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -264,7 +264,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<p class="colorlib-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p class="colorlib-lead">\</p>
 							<p><a href="#" class="btn btn-primary btn-learn">Contact me!</a></p>
 						</div>
 						
