--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Balay Template</title>
+	<title>Suprat properti</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -66,8 +66,8 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> Distributed by: <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="http://nothingtochance.co/" target="_blank">nothingtochance.co</a></span></small></p>
+ &copy;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true"></i>  <a href="https://colorlib.com" target="_blank"></a>: <a href="" target="_blank"></a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span> <a href="http://nothingtochance.co/" target="_blank"></a></span></small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -97,7 +97,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 										</div>
 										<div class="colorlib-text">
 											<h3>General Conctructing</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<p>"Kami menyediakan layanan konstruksi umum yang komprehensif, mulai dari pondasi hingga penyelesaian akhir. Dengan tim ahli dan material berkualitas, kami mewujudkan visi bangunan Anda menjadi kenyataan yang kokoh dan tahan lama."</p>
 										</div>
 									</div>
 
@@ -107,7 +107,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 										</div>
 										<div class="colorlib-text">
 											<h3>Pre-Contruction Design</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<p>Ini adalah tahap krusial di mana kami merumuskan ide menjadi sebuah rencana yang matang. Meliputi desain arsitektur, studi kelayakan, dan perencanaan anggaran untuk memastikan proyek berjalan lancar, efisien, dan sesuai tujuan. </p>
 										</div>
 									</div>
 								</div>
@@ -122,7 +122,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 										</div>
 										<div class="colorlib-text">
 											<h3>Building &amp; Modeling</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<p>Melalui pemodelan 3D dan teknologi konstruksi modern, kami memastikan setiap detail terencana dengan presisi. Visualisasikan proyek Anda sebelum dibangun untuk menjamin efisiensi dan hasil akhir yang sempurna sesuai harapan. </p>
 										</div>
 									</div>
 
@@ -132,7 +132,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 										</div>
 										<div class="colorlib-text">
 											<h3>Construction Management</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<p>"Kami mengambil alih kompleksitas manajemen proyek Anda. Mulai dari pengawasan harian, koordinasi tim, hingga kontrol anggaran dan jadwal, kami pastikan proyek selesai tepat waktu, sesuai budget, dan dengan standar kualitas tertinggi." </p>
 										</div>
 									</div>
 								</div>
@@ -195,7 +195,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<p class="colorlib-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p class="colorlib-lead">.</p>
 							<p><a href="#" class="btn btn-primary btn-learn">Contact me!</a></p>
 						</div>
 						
