--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
+									<a href="whatsapp://send?text=Hello&phone=+6282141786517"><img src="https://www.octagonstudio.com/images/contact/wa-logo.png"></a>
 									<p><a href="tel://">+62 821-4178-6517</a></p>
 									<p><a href="tel://">+62 819-9895-0280</a></p>
 								</div>
