--- a/about.html
+++ b/about.html
@@ -65,9 +65,9 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"></a>  <a href="https://themewagon.com/" target="_blank"></a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span> <a href="http://nothingtochance.co/" target="_blank"</a></span></small></p>
+				<p><small>; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+;<script>document.write(new Date().getFullYear());</script>  <i class="icon-heart" aria-hidden="true"></i><a href="" target="_blank"></a>  <a href="" target="_blank"></a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span> <a href="" target="_blank"</a></span></small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
