--- a/index.html
+++ b/index.html
@@ -406,12 +406,12 @@ Beli atau sewa properti terbaik dengan harga terjangkau dan lokasi strategis. Ka
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<h2>Get in Touch!</h2>
+							<h2></h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<p class="colorlib-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p class="colorlib-lead">.</p>
 							<p><a href="#" class="btn btn-primary btn-learn">Contact me!</a></p>
 						</div>
 						
