--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-push-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1></h1>
+						   					<h1>dapatkan segera harga promo</h1>
 												<h2>harga mulai 300 jutaan<a href="https://colorlib.com/" target="_blank"></a></h2>
 												<p><a class="btn btn-primary btn-learn">View Project <i class="icon-arrow-right3"></i></a></p>
 											</div>
@@ -145,7 +145,7 @@
 							<div class="about-desc">
 								<span class="heading-meta">Welcome</span>
 								<h2 class="colorlib-heading">Who we are</h2>
-								<p>IndoProperti adalah platform penyedia jasa jual beli dan sewa properti terpercaya. Kami menghadirkan pilihan rumah terbaik di lokasi strategis dengan harga kompetitif. Tim kami siap membantu Anda dengan proses yang cepat, aman, dan transparan..</p>
+								<p>SupratProperti adalah platform penyedia jasa jual beli dan sewa properti terpercaya. Kami menghadirkan pilihan rumah terbaik di lokasi strategis dengan harga kompetitif. Tim kami siap membantu Anda dengan proses yang cepat, aman, dan transparan..</p>
 								<p>Temukan Rumah Impian Anda dengan Mudah
 Beli atau sewa properti terbaik dengan harga terjangkau dan lokasi strategis. Kami siap membantu Anda mewujudkan hunian ideal!</p>
 							</div>
