--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-push-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>dapatkan segera harga promo</h1>
-												<h2>harga mulai 300 jutaan<a href="https://colorlib.com/" target="_blank"></a></h2>
+						   					<h1>harga mulai 300 jutaan</h1>
+												<h2><a href="https://colorlib.com/" target="_blank"></a></h2>
 												<p><a class="btn btn-primary btn-learn">View Project <i class="icon-arrow-right3"></i></a></p>
 											</div>
 					   				</div>
